# worksforme

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
worksforme/: main.py
worksforme/templates/: base.html  script.js  style.css
