[metadata]
name = worksforme
version = attr: worksforme.version.__version__
author = R
author_email = contact+worksforme@vonshednob.cc
url = https://vonshednob.cc/
description = A primitive browser-based soundboard
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE

[options]
test_suite = tests
python_requires = >=3.6
packages = worksforme
include_package_data = true
install_requires =
    bottle
tests_require =
setup_requires =

[options.package_data]
* = *.html, *.css, *.js

[options.entry_points]
console_scripts =
    worksforme = worksforme.main:run

[sdist]
formats = gztar

